--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 </head>
 <body>
 
+    <div id="main">
     <h1>Etch-a-sketch</h1>
     <div id="container">
-        
     </div>
+    </div>
+
+     <input id="sizeSlider" type="range" value="16" min="1" max="64">
     
 </body>
 </html>
