--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 <body>
 
     <div id="main">
-    <h1>Etch-a-sketch</h1>
-    <div id="container">
+        <div id="sketch">
+        <h1>Etch-a-sketch</h1>
+        <div id="container">
     </div>
+      
     </div>
 
-     <input id="sizeSlider" type="range" value="16" min="1" max="64">
-    
+    <p>Choose a number between 1 to 100</p>
+    <div class="numbers"></div>
+    <input id="number" type="text"><button id="bttn">submit</button>
+    </div>
 </body>
 </html>
