Adjust the style of the page

--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
 </head>
 <body>
 
-    <div id="main">
-        <div id="sketch">
+    <div id="options">
+        <p>Choose a number between 1 to 64</p>
+        <div class="numbers">16 x 16</div>
+
+            <div id="inputBttn">
+           <input id="number" type="text">
+           <button id="bttn">submit</button>
+            </div>
+      </div>
+
+    <div id="sketch">
         <h1>Etch-a-sketch</h1>
         <div id="container">
-    </div>
-      
+        </div>
     </div>
 
-    <p>Choose a number between 1 to 100</p>
-    <div class="numbers"></div>
-    <input id="number" type="text"><button id="bttn">submit</button>
-    </div>
+   
+    
 </body>
 </html>
