--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
            <input id="number" type="text">
            <button id="bttn">submit</button>
             </div>
+            <button id="clear">Clear</button>
       </div>
 
     <div id="sketch">
