Add color picker

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
            <button id="bttn">submit</button>
             </div>
             <button id="clear">Clear</button>
+            <input id="colorPicker" type="color" value="#333333">
+            <p id="pickColor">pick a color</p>
       </div>
 
     <div id="sketch">
